--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <div class="chat-panels" role="tabpanel" id="chat-order" aria-labelledby="tab-order" hidden></div>
     <div class="chat-panels" role="tabpanel" id="chat-area" aria-labelledby="tab-area" hidden></div>
     <div class="chat-panels" role="tabpanel" id="chat-trade" aria-labelledby="tab-trade" hidden></div>
+    <div id="resourceBar" class="resource-bar"></div>
+
   </section>
 
   <script src="/src/app.js"></script>
