Add build farm action in sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </section>
     <aside class="sidebar" aria-label="Player information and actions">
       <section class="stats" aria-label="Player stats"></section>
-      <section class="actions" aria-label="Available actions"></section>
+      <section class="actions" aria-label="Available actions">
+        <h2>Actions</h2>
+        <button id="buildFarmBtn" type="button">Build Farm</button>
+      </section>
     </aside>
   </main>
 
