Use relative paths for script tags

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
   </section>
 
-  <script src="/src/app.js"></script>
-  <script src="/src/map/map-core.js"></script>
-  <script src="/src/map/map-render.js"></script>
-  <script src="/src/game/state.js"></script>
-  <script src="/src/game/economy.js"></script>
-  <script src="/src/game/chat.js"></script>
+  <script src="src/app.js"></script>
+  <script src="src/map/map-core.js"></script>
+  <script src="src/map/map-render.js"></script>
+  <script src="src/game/state.js"></script>
+  <script src="src/game/economy.js"></script>
+  <script src="src/game/chat.js"></script>
 </body>
 </html>
