--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
         <h3 class="inventory-title">Active Quests</h3>
         <div id="questList"></div>
       </div>
+
+      <div class="skills-panel" id="skillsPanel">
+        <h3 class="inventory-title">Skills</h3>
+        <div id="skillsList"></div>
+      </div>
+
+      <div class="settlement-panel" id="settlementPanel">
+        <h3 class="inventory-title">Settlements</h3>
+        <div id="settlementList"></div>
+      </div>
     </aside>
   </main>
 
@@ -98,6 +108,11 @@
   <script src="src/game/narrative.js"></script>
   <script src="src/game/zones.js"></script>
   <script src="src/game/pvp.js"></script>
+  <script src="src/game/character-creation.js"></script>
+  <script src="src/game/skills.js"></script>
+  <script src="src/game/settlement.js"></script>
+  <script src="src/game/gathering.js"></script>
+  <script src="src/game/guilds.js"></script>
   <script src="src/ui/toast.js"></script>
   <script src="src/ui/rendering.js"></script>
 </body>
