--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
   <script src="src/game/settlement.js"></script>
   <script src="src/game/gathering.js"></script>
   <script src="src/game/guilds.js"></script>
+  <script src="src/game/auction-house.js"></script>
+  <script src="src/game/player-stats.js"></script>
+  <script src="src/game/achievements.js"></script>
+  <script src="src/game/leaderboards.js"></script>
+  <script src="src/game/skinning.js"></script>
+  <script src="src/game/alchemy.js"></script>
+  <script src="src/game/player-shop.js"></script>
+  <script src="src/game/reputation.js"></script>
   <script src="src/ui/toast.js"></script>
   <script src="src/ui/rendering.js"></script>
 </body>
