--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
   <div id="itemTooltip" class="tooltip tooltip--item hidden" role="tooltip" hidden></div>
 
   <!-- Scripts -->
+  <!-- Type definitions (documentation only, no runtime code) -->
+  <script src="src/types/core.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
