--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
   <!-- Scripts -->
   <!-- Type definitions (documentation only, no runtime code) -->
   <script src="src/types/core.js"></script>
+  <!-- Core world system -->
+  <script src="src/core/world.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
@@ -168,5 +170,6 @@
   <script src="src/ui/toast.js"></script>
   <script src="src/ui/rendering.js"></script>
   <script src="src/ui/map-render.js"></script>
+  <script src="src/ui/world-map-render.js"></script>
 </body>
 </html>
