--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
   <!-- Core world system -->
   <script src="src/core/world.js"></script>
   <script src="src/core/spawn-system.js"></script>
+  <script src="src/core/combat-enhanced.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
