Faction system, Reputations and behaviors

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
   <script src="src/core/world.js"></script>
   <script src="src/core/spawn-system.js"></script>
   <script src="src/core/combat-enhanced.js"></script>
+  <script src="src/core/faction-system.js"></script>
+  <script src="src/core/guard-system.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
@@ -192,5 +194,6 @@
   <script src="src/ui/rendering.js"></script>
   <script src="src/ui/map-render.js"></script>
   <script src="src/ui/world-map-render.js"></script>
+  <script src="src/ui/faction-debug.js"></script>
 </body>
 </html>
